# lightweight_mmm

./: pyproject.toml
lightweight_mmm/: lightweight_mmm_memo.py  models_memo.py
