[tool.poetry]
name = "lightweight-mmm"
version = "0.1.0"
description = ""
authors = ["8-u8 <itotaka523@gmail.com>"]
readme = "README.md"
packages = [{include = "lightweight_mmm"}]

[tool.poetry.dependencies]
python = "^3.10"
copyright = "^1.0.1.0"
google = "^3.0.0"
absl-py = "^1.4.0"
arviz = ">=0.11.2"
immutabledict = ">=2.0.0"
jax = ">=0.3.18"
jaxlib = ">=0.3.18"
matplotlib = "3.6.1"
numpy = ">=1.23"
numpyro = ">=0.9.2"
pandas = ">=1.1.5"
seaborn = "0.11.1"
scikit-learn = "^1.3.0"
statsmodels = ">=0.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
